--- a/index.html
+++ b/index.html
@@ -17,5 +17,6 @@
     <div class="container"></div>
     <script src="app.js"></script>
     <script src="drag.js"></script>
+    <script src="theme.js"></script>
   </body>
 </html>
